Bug 289990 - Invalid image geometry within the Image Box form widget when frame properties change
Summary: Invalid image geometry within the Image Box form widget when frame properties...
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Forms (other bugs)
Version First Reported In: 2.4 beta5 (Calligra 2.4 beta5)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-28 09:18 UTC by Jarosław Staniek
Modified: 2012-01-31 22:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4 RC1 (Calligra 2.4 RC1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2011-12-28 09:18:44 UTC
Invalid image geometry within the Image Box form widget when frame parameters change. Only when no frame is set, the image has proper geometry. The frame parameters are: frame shadow, frame shape, frame width.

Reproducible: Always

Steps to Reproduce:
Change the one or more frame properties for a form image box.

Actual Results:  
Invalid visual change

Expected Results:  
Proper visual change
Comment 1 Jarosław Staniek 2011-12-28 10:09:17 UTC
Also Mid Frame Width property should affect the appearance.
Comment 2 Jarosław Staniek 2011-12-29 00:40:27 UTC
Git commit 7bb00e25b95966ef12fa444332e5b1fe155ed937 by Jaroslaw Staniek.
Committed on 29/12/2011 at 00:49.
Pushed by staniek into branch 'master'.

Fixed bug: Invalid image geometry for the Image Box when frame changes

M  +1    -2    kexi/kexiutils/utils.cpp
M  +59   -13   kexi/plugins/forms/widgets/kexidbimagebox.cpp
M  +15   -5    kexi/plugins/forms/widgets/kexidbimagebox.h
M  +1    -1    kexi/plugins/forms/widgets/kexidblabel.h
M  +1    -1    kexi/plugins/forms/widgets/kexiframe.h
M  +1    -1    kexi/plugins/forms/widgets/kexiframeutils_p.cpp

http://commits.kde.org/calligra/7bb00e25b95966ef12fa444332e5b1fe155ed937