Fixed bug: Invalid image geometry for the Image Box when frame changes

BUG:289990